--- a/mupdf/src/main/res/layout/main_tool_bar.xml
+++ b/mupdf/src/main/res/layout/main_tool_bar.xml
@@ -50,7 +50,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="Separations"
-                    android:onClick="@{toolBarModel::OnSepsButtonClick}"
+                    android:onClick="OnSepsButtonClick"
                     android:src="@drawable/ic_sep"
                     android:visibility="@{toolBarModel.proof ? View.VISIBLE : View.INVISIBLE}" />
 
@@ -106,7 +106,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/more"
-                    android:onClick="@{toolBarModel::OnMoreButtonClick}"
+                    android:onClick="OnMoreButtonClick"
                     android:src="@drawable/ic_more"
                     android:visibility="@{toolBarModel.canProof ? View.VISIBLE : View.INVISIBLE}" />
 
@@ -126,7 +126,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/cancel"
-                    android:onClick="@{toolBarModel::OnCancelSearchButtonClick}"
+                    android:onClick="OnCancelSearchButtonClick"
                     android:src="@drawable/ic_cancel" />
 
                 <EditText
@@ -177,7 +177,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/cancel"
-                    android:onClick="@{toolBarModel::OnCancelAnnotButtonClick}"
+                    android:onClick="OnCancelAnnotButtonClick"
                     android:src="@drawable/ic_cancel" />
 
                 <ImageButton
@@ -188,7 +188,7 @@
                     android:layout_toLeftOf="@+id/underlineButton"
                     android:background="@drawable/button"
                     android:contentDescription="@string/highlight"
-                    android:onClick="@{toolBarModel::OnHighlightButtonClick}"
+                    android:onClick="OnHighlightButtonClick"
                     android:src="@drawable/ic_highlight" />
 
                 <ImageButton
@@ -199,7 +199,7 @@
                     android:layout_toLeftOf="@+id/strikeOutButton"
                     android:background="@drawable/button"
                     android:contentDescription="@string/underline"
-                    android:onClick="@{toolBarModel::OnUnderlineButtonClick}"
+                    android:onClick="OnUnderlineButtonClick"
                     android:src="@drawable/ic_underline" />
 
                 <ImageButton
@@ -210,7 +210,7 @@
                     android:layout_toLeftOf="@+id/inkButton"
                     android:background="@drawable/button"
                     android:contentDescription="@string/strike_out"
-                    android:onClick="@{toolBarModel::OnStrikeOutButtonClick}"
+                    android:onClick="OnStrikeOutButtonClick"
                     android:src="@drawable/ic_strike" />
 
                 <ImageButton
@@ -221,7 +221,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/ink"
-                    android:onClick="@{toolBarModel::OnInkButtonClick}"
+                    android:onClick="OnInkButtonClick"
                     android:src="@drawable/ic_pen" />
 
             </RelativeLayout>
@@ -240,7 +240,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/cancel"
-                    android:onClick="@{toolBarModel::OnCancelDeleteButtonClick}"
+                    android:onClick="OnCancelDeleteButtonClick"
                     android:src="@drawable/ic_cancel" />
 
                 <TextView
@@ -265,7 +265,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/delete"
-                    android:onClick="@{toolBarModel::OnDeleteButtonClick}"
+                    android:onClick="OnDeleteButtonClick"
                     android:src="@drawable/ic_trash" />
 
             </RelativeLayout>
@@ -284,7 +284,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/cancel"
-                    android:onClick="@{toolBarModel::OnCancelMoreButtonClick}"
+                    android:onClick="OnCancelMoreButtonClick"
                     android:src="@drawable/ic_cancel" />
 
                 <ImageButton
@@ -295,7 +295,7 @@
                     android:layout_toLeftOf="@+id/printButton"
                     android:background="@drawable/button"
                     android:contentDescription="@string/proof"
-                    android:onClick="@{toolBarModel::OnProofButtonClick}"
+                    android:onClick="OnProofButtonClick"
                     android:src="@drawable/ic_proof"
                     android:visibility="@{(toolBarModel.canProof &amp;&amp; toolBarModel.gprfSurpport)? View.VISIBLE : View.INVISIBLE}" />
 
@@ -307,7 +307,7 @@
                     android:layout_toLeftOf="@+id/copyTextButton"
                     android:background="@drawable/button"
                     android:contentDescription="@string/print"
-                    android:onClick="@{toolBarModel::OnPrintButtonClick}"
+                    android:onClick="OnPrintButtonClick"
                     android:src="@drawable/ic_print" />
 
                 <ImageButton
@@ -319,7 +319,7 @@
                     android:layout_toLeftOf="@+id/editAnnotButton"
                     android:background="@drawable/button"
                     android:contentDescription="@string/copy_text_to_the_clipboard"
-                    android:onClick="@{toolBarModel::OnCopyTextButtonClick}"
+                    android:onClick="OnCopyTextButtonClick"
                     android:src="@drawable/ic_clipboard" />
 
                 <ImageButton
@@ -330,7 +330,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/edit_annotations"
-                    android:onClick="@{toolBarModel::OnEditAnnotButtonClick}"
+                    android:onClick="OnEditAnnotButtonClick"
                     android:src="@drawable/ic_annotation" />
             </RelativeLayout>
 
@@ -348,7 +348,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/cancel"
-                    android:onClick="@{toolBarModel::OnCancelAcceptButtonClick}"
+                    android:onClick="OnCancelAcceptButtonClick"
                     android:src="@drawable/ic_cancel" />
 
                 <TextView
@@ -372,7 +372,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/button"
                     android:contentDescription="@string/accept"
-                    android:onClick="@{toolBarModel::OnAcceptButtonClick}"
+                    android:onClick="OnAcceptButtonClick"
                     android:src="@drawable/ic_check" />
             </RelativeLayout>
         </ViewAnimator>
