--- a/mupdf/src/main/res/layout/activity_reader.xml
+++ b/mupdf/src/main/res/layout/activity_reader.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -8,7 +7,7 @@
 
         <variable
             name="bookModel"
-            type="com.jaky.mupdf.binding.ActivityMupdfModel" />
+            type="com.jaky.mupdf.binding.ActivityReaderModel" />
     </data>
 
     <RelativeLayout
@@ -16,7 +15,7 @@
         android:layout_height="match_parent">
 
         <com.jaky.mupdf.ui.views.adapterview.MuPDFReaderView
-            android:id="@+id/book_view"
+            android:id="@+id/reader_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
