Revert "clean code."
This reverts commit d072209404221ab3cf5ed2d589dbb2e87fa4104e.

--- a/mupdf/src/main/res/layout/activity_mupdf.xml
+++ b/mupdf/src/main/res/layout/activity_mupdf.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -7,7 +8,7 @@
 
         <variable
             name="bookModel"
-            type="com.jaky.mupdf.binding.ActivityReaderModel" />
+            type="com.jaky.mupdf.binding.ActivityMupdfModel" />
     </data>
 
     <RelativeLayout
@@ -15,7 +16,7 @@
         android:layout_height="match_parent">
 
         <com.jaky.mupdf.ui.views.adapterview.MuPDFReaderView
-            android:id="@+id/reader_pager"
+            android:id="@+id/book_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
