--- a/mupdf/src/main/res/layout/activity_mupdf.xml
+++ b/mupdf/src/main/res/layout/activity_mupdf.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.jaky.mupdf.ui.views.adapterview.MuPDFReaderView
+        <com.jaky.mupdf.ui.views.adapterview.MuPDFReadderView
             android:id="@+id/reader_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
