--- a/mupdf/src/main/res/values/colors.xml
+++ b/mupdf/src/main/res/values/colors.xml
@@ -4,18 +4,14 @@
 	<color name="toolbar">#FFFFFF</color>
 	<color name="page_indicator">#33000000</color>
 	<color name="busy_indicator">#33000000</color>
-	<color name="button_normal">#33000000</color>
+	<color name="button_normal">#FFFFFF</color>
 	<color name="button_pressed">#33000000</color>
-	<color name="text_normal">#FFFFFF</color>
-	<color name="text_pressed">#FFFFFF</color>
+	<color name="text_normal">#000000</color>
+	<color name="text_pressed">#33000000</color>
 	<color name="text_border_normal">#000000</color>
 	<color name="text_border_pressed">#2572AC</color>
 	<color name="text_border_focused">#000000</color>
-	<color name="seek_thumb">#2572AC</color>
-	<color name="seek_progress">#FFFFFF</color>
+	<color name="seek_thumb">#000000</color>
+	<color name="seek_progress">#000000</color>
 	<color name="seek_progress1">#FFFF0000</color>
-
-	private static final int LINK_COLOR = 0x80AC7225;
-	private static final int BOX_COLOR = 0xFF4444FF;
-	private static final int INK_COLOR = 0xFFFF0000;
 </resources>
